--- a/Day10/ToyProject01/Addressbook_step3/Addressbook_step3.vcxproj
+++ b/Day10/ToyProject01/Addressbook_step3/Addressbook_step3.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ec62894b-0397-4e97-859d-76e5810617fe}</ProjectGuid>
-    <RootNamespace>Chap1904app</RootNamespace>
+    <ProjectGuid>{30e3ef92-19b7-43da-98f7-adbeb50bf0ca}</ProjectGuid>
+    <RootNamespace>Addressbookstep3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,10 +128,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="line.h" />
-    <ClInclude Include="point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
