--- a/Day11/ToyProject01/Addressbook_step6/Addressbook_step6.vcxproj
+++ b/Day11/ToyProject01/Addressbook_step6/Addressbook_step6.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>18.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{ec62894b-0397-4e97-859d-76e5810617fe}</ProjectGuid>
-    <RootNamespace>Chap1904app</RootNamespace>
+    <ProjectGuid>{F21F2566-6525-48AC-B23C-42F7B64B8B94}</ProjectGuid>
+    <RootNamespace>Addressbookstep4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -128,10 +128,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="line.h" />
-    <ClInclude Include="point.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
