--- a/Day11/ToyProject01/Addressbook_step8/Addressbook_step8.vcxproj.filters
+++ b/Day11/ToyProject01/Addressbook_step8/Addressbook_step8.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="addressbook.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="point.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
-    <ClInclude Include="line.h">
+    <ClInclude Include="addressbook.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
